# mangate

./: .gitignore  LICENSE  README.md  TODO.md  go.mod  go.sum
.github/workflows/: ci.yml
cmd/: app.go  main.go  run.go
cmd/mangate/: main.go
docs/: cli.md  dataset.md  python.md
examples/: dataset-config.json
internal/api/: chapter.go  client.go  manga.go
internal/app/: app.go  app_test.go  usecase.go
internal/archive/: archive.go  archive_test.go
internal/cache/: cache.go  search_history.go  search_history_test.go
internal/cli/: archive.go  archive_test.go  args.go  chapters.go  chapters_test.go  completion.go  completion_test.go  config.go  config_test.go  dataset.go  diagnostics.go  diagnostics_test.go  download.go  download_test.go  flags.go  help_test.go  output.go  output_test.go  pages.go  providers.go  root.go  search.go  title.go  tui.go
internal/client/: client.go
internal/config/: config.go  config_test.go  default.go  file_config.go  paths.go
internal/constant/: logo.go  logo.txt  metadata.go  tui.go
internal/converter/: converter.go  converter_test.go
internal/dataset/: collector.go  collector_test.go  config.go  config_test.go  export.go  planner.go  store.go  validator.go
internal/downloader/: destination.go  download.go  download_test.go  downloader.go  progress.go  progress_test.go
internal/interactive/: chapter_list.go  commands.go  commands_test.go  keymap.go  layout.go  model.go  (+5 more)
python/: README.md  pyproject.toml
python/src/mangate/: __init__.py  client.py
python/tests/: test_client.py
scripts/: install.sh  run.sh
(+75 files in other folders)
