[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mangate"
version = "0.1.0"
description = "Python API for the Mangate authorized manga downloader"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "evgen2571", email = "evgen.10.02.2008.83@gmail.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/evgen2571/mangate"
Documentation = "https://github.com/evgen2571/mangate#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/mangate"]
